<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sysrqb.ortt.OnionServiceInfo">

    <TextView
        android:id="@+id/onion_service_addr_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onion_service_addr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />
    <EditText
        android:id="@+id/onion_service_addr_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/onion_service_addr_label"
        app:layout_constraintVertical_bias="0.205"/>

    <TextView
        android:id="@+id/onion_service_port_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onion_service_port"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onion_service_addr_field"
        app:layout_constraintVertical_bias="0.153"/>
    <EditText
        android:id="@+id/onion_service_port_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/onion_service_port_label"
        app:layout_constraintVertical_bias="0.319"/>

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button_text"
        android:onClick="startTimer"
        app:layout_constraintTop_toBottomOf="@+id/onion_service_port_field"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</android.support.constraint.ConstraintLayout>
